scrollbar ui fix

--- a/newtab.css
+++ b/newtab.css
@@ -150,6 +150,7 @@ h2 {
     #sidebar.collapsed {
         min-width: 80px;
         width: 80px;
+        padding-right: 0px;
         overflow: hidden;
     }
     #sidebar.no-transition {
@@ -234,7 +235,11 @@ h2 {
     width: 100%;
     box-sizing: border-box;
     user-select: none;
+    -webkit-user-select: none;
 }
+    .tab-item.collapsed {
+        max-width: 48px;
+    }
     .tab-item.subgroup-item {
         background-color: var(--subgroup-bg-color);
         padding: 4px 10px;
@@ -394,6 +399,8 @@ h2 {
     list-style-type: none;
     overflow-y: auto;
     overflow-x: hidden;
+    user-select: none;
+    -webkit-user-select: none;
 }
     .column:not(.dragging) {
         transition: all 0.3s ease;
@@ -433,6 +440,7 @@ h2 {
     .column-title-text {
         display: inline;
         user-select: none;
+        -webkit-user-select: none;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
